monitoring/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: cattle-monitoring-system
spec:
  rules:
  - host: "prometheus.192.168.20.230.dnsify.me"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rancher-monitoring-prometheus
            port:
              number: 9090
